Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Icon Boolean Widget can not render in 'False' case
Bug fixes:
~~~~~~~~~~
- i18n structure wasn't imported from CPSCourrier
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- TypeIconWidget can use the brain's metadata
- Optimisation: cookies get unserialized only once